# brigde-module-dicord-chat

./: .gitignore  README.md  config.yaml.example  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
discord_bridge/: __init__.py  bridge.py  config.py  exceptions.py  logger.py  message.py  middleware.py  router.py
docs/: index.md
docs/api-reference/: bridge.md  commandrouter.md  configuration.md  exceptions.md  middleware.md  smartmessage.md
docs/examples/: attachments.md  basic-bot.md  command-router.md  dm-handler.md  embeds.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/plans/: 2026-02-06-discord-bridge-module.md
docs/user-guide/: attachments.md  basic-usage.md  command-router.md  middleware.md  replies-embeds.md
examples/: advanced_router.py  attachments.py  dm_handler.py  embeds.py  main.py
tests/: test_bridge_async.py  test_config.py  test_core_classes.py  test_message_reply.py
